--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
@@ -41,7 +41,9 @@
   "peerDependencies": {
     "vue": "^3.4.21",
     "unplugin-auto-import": "^0.17.5",
-    "@tb-dev/utility-types": "^1.2.0"
+    "@tb-dev/utility-types": "^1.2.0",
+    "vue-router": "^4.3.0",
+    "@vueuse/core": "^10.9.0"
   },
   "engines": {
     "node": ">=20"
