--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "1.0.8",
+  "version": "1.0.10",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
@@ -45,7 +45,8 @@
     "vue-router": "^4.3.0",
     "@vueuse/core": "^10.9.0",
     "manatsu": "^0.5.0",
-    "@manatsu/style": "^0.5.0"
+    "@manatsu/style": "^0.5.0",
+    "pinia": "^2.1.7"
   },
   "engines": {
     "node": ">=20"
