--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
@@ -43,6 +43,7 @@
     "unplugin-auto-import": "^0.17.5",
     "@tb-dev/utils": "^1.3.1",
     "@tb-dev/utility-types": "^1.2.1",
+    "@tauri-apps/api": "^1.5.3",
     "vue-router": "^4.3.0",
     "@vueuse/core": "^10.9.0",
     "@vueuse/router": "^10.9.0",
