--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "1.2.6",
+  "version": "1.2.7",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
@@ -41,15 +41,15 @@
   "peerDependencies": {
     "vue": "^3.4.21",
     "unplugin-auto-import": "^0.17.5",
-    "@tb-dev/utils": "^1.3.1",
-    "@tb-dev/utility-types": "^1.2.1",
-    "@tauri-apps/api": "^1.5.3",
+    "@tb-dev/utils": "^1.3.2",
+    "@tb-dev/utility-types": "^1.2.2",
+    "@tauri-apps/api": "^2.0.0-beta.6",
     "vue-router": "^4.3.0",
     "@vueuse/core": "^10.9.0",
     "@vueuse/router": "^10.9.0",
     "@vueuse/math": "^10.9.0",
-    "manatsu": "^0.5.2",
-    "@manatsu/style": "^0.5.2",
+    "manatsu": "^0.5.14",
+    "@manatsu/style": "^0.5.14",
     "pinia": "^2.1.7"
   },
   "engines": {
