--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
@@ -27,7 +27,8 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.12.7",
+    "@tb-dev/eslint-config": "^3.4.2",
+    "@types/node": "^20.12.8",
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
@@ -35,21 +36,21 @@
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.17.5",
-    "vite": "^5.2.10",
+    "vite": "^5.2.11",
     "vite-plugin-dts": "^3.9.0"
   },
   "peerDependencies": {
-    "vue": "^3.4.21",
-    "unplugin-auto-import": "^0.17.5",
-    "@tb-dev/utils": "^1.5.0",
-    "@tb-dev/utility-types": "^1.2.5",
     "@tauri-apps/api": "^2.0.0-beta.7",
-    "vue-router": "^4.3.0",
+    "@tb-dev/utility-types": "^1.2.5",
+    "@tb-dev/utils": "^1.5.0",
     "@vueuse/core": "^10.9.0",
-    "@vueuse/router": "^10.9.0",
     "@vueuse/math": "^10.9.0",
+    "@vueuse/router": "^10.9.0",
     "manatsu": "^0.9.0",
-    "pinia": "^2.1.7"
+    "pinia": "^2.1.7",
+    "unplugin-auto-import": "^0.17.5",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "engines": {
     "node": ">=20"
