--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "1.6.6",
+  "version": "1.6.7",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
@@ -22,12 +22,13 @@
     "format": "prettier . --write",
     "format-check": "prettier . --check",
     "lint": "eslint . --config eslint.config.js --cache",
+    "lint-fix": "eslint . --config eslint.config.js --fix",
     "prepare": "husky",
     "release": "pnpm run build && pnpm publish",
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@tb-dev/eslint-config": "^3.5.0",
+    "@tb-dev/eslint-config": "^3.5.1",
     "@types/node": "^20.12.11",
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
@@ -41,12 +42,12 @@
   },
   "peerDependencies": {
     "@tauri-apps/api": "^2.0.0-beta.11",
-    "@tb-dev/utility-types": "^1.2.7",
-    "@tb-dev/utils": "^1.6.0",
+    "@tb-dev/utility-types": "^1.3.0",
+    "@tb-dev/utils": "^1.7.4",
     "@vueuse/core": "^10.9.0",
     "@vueuse/math": "^10.9.0",
     "@vueuse/router": "^10.9.0",
-    "manatsu": "^0.10.1",
+    "manatsu": "^0.10.3",
     "pinia": "^2.1.7",
     "unplugin-auto-import": "^0.17.5",
     "vue": "^3.4.27",
