--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "1.6.10",
+  "version": "2.0.0",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
@@ -27,6 +27,9 @@
     "release": "pnpm run build && pnpm publish",
     "type-check": "tsc --noEmit"
   },
+  "dependencies": {
+    "unplugin-auto-import": "^0.17.6"
+  },
   "devDependencies": {
     "@tb-dev/eslint-config": "^3.6.1",
     "@types/node": "^20.12.12",
@@ -36,9 +39,9 @@
     "prettier": "^3.2.5",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
-    "unplugin-auto-import": "^0.17.6",
     "vite": "^5.2.11",
-    "vite-plugin-dts": "^3.9.1"
+    "vite-plugin-dts": "^3.9.1",
+    "vue": "^3.4.27"
   },
   "peerDependencies": {
     "@tauri-apps/api": "^2.0.0-beta.11",
@@ -49,8 +52,6 @@
     "@vueuse/router": "^10.9.0",
     "manatsu": "^0.10.7",
     "pinia": "^2.1.7",
-    "unplugin-auto-import": "^0.17.6",
-    "vue": "^3.4.27",
     "vue-router": "^4.3.2"
   },
   "engines": {
