--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "unplugin-auto-import": "^0.17.6"
+    "unplugin-auto-import": "^0.17.6",
+    "vite": "^5.2.11"
   },
   "devDependencies": {
     "@tb-dev/eslint-config": "^3.6.1",
@@ -39,7 +40,6 @@
     "prettier": "^3.2.5",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11",
     "vite-plugin-dts": "^3.9.1",
     "vue": "^3.4.27"
   },
