--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,7 +7,6 @@
     "github.vscode-pull-request-github",
     "esbenp.prettier-vscode",
     "vscode-icons-team.vscode-icons",
-    "redhat.vscode-yaml",
-    "ms-vscode.vscode-typescript-next"
+    "redhat.vscode-yaml"
   ]
 }
