--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
@@ -28,30 +28,30 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "unplugin-auto-import": "^0.18.0",
-    "vite": "^5.3.4"
+    "unplugin-auto-import": "^0.18.2",
+    "vite": "^5.3.5"
   },
   "devDependencies": {
-    "@tb-dev/eslint-config": "^4.0.0",
-    "@types/node": "^20.14.11",
+    "@tb-dev/eslint-config": "^4.4.2",
+    "@types/node": "^22.0.0",
     "eslint": "^8.57.0",
-    "husky": "^9.1.1",
+    "husky": "^9.1.3",
     "lint-staged": "^15.2.7",
     "prettier": "^3.3.3",
     "tslib": "^2.6.3",
-    "typescript": "^5.5.3",
+    "typescript": "^5.5.4",
     "vite-plugin-dts": "^3.9.1",
-    "vue": "^3.4.33"
+    "vue": "^3.4.34"
   },
   "peerDependencies": {
     "@tauri-apps/api": "^2.0.0-beta.15",
-    "@tb-dev/utils": "^2.0.1",
+    "@tb-dev/utils": "^2.0.3",
     "@vueuse/core": "^10.11.0",
     "@vueuse/math": "^10.11.0",
     "@vueuse/router": "^10.11.0",
-    "manatsu": "^0.14.0",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.33",
+    "manatsu": "^1.0.0-alpha",
+    "pinia": "^2.2.0",
+    "vue": "^3.4.34",
     "vue-router": "^4.4.0"
   },
   "engines": {
