--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
@@ -33,23 +33,23 @@
   },
   "devDependencies": {
     "@tb-dev/eslint-config": "^4.4.2",
-    "@types/node": "^22.0.0",
+    "@types/node": "^22.1.0",
     "eslint": "^8.57.0",
-    "husky": "^9.1.3",
-    "lint-staged": "^15.2.7",
+    "husky": "^9.1.4",
+    "lint-staged": "^15.2.8",
     "prettier": "^3.3.3",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
     "vite-plugin-dts": "^3.9.1",
-    "vue": "^3.4.34"
+    "vue": "^3.4.35"
   },
   "peerDependencies": {
-    "@tauri-apps/api": "^2.0.0-beta.15",
-    "@tb-dev/utils": "^2.0.3",
+    "@tauri-apps/api": "^2.0.0-rc.0",
+    "@tb-dev/utils": "^2.1.0",
     "@vueuse/core": "^10.11.0",
     "@vueuse/math": "^10.11.0",
     "@vueuse/router": "^10.11.0",
-    "manatsu": "^1.0.0-alpha",
+    "manatsu": "^1.0.0-alpha.4",
     "pinia": "^2.2.0",
     "vue": "^3.4.34",
     "vue-router": "^4.4.0"
