--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "4.1.0",
+  "version": "5.0.0",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
   "private": false,
-  "packageManager": "pnpm@9.6.0",
+  "packageManager": "pnpm@9.7.0",
   "homepage": "https://github.com/ferreira-tb/auto-import-config",
   "repository": {
     "type": "git",
@@ -29,19 +29,19 @@
   },
   "dependencies": {
     "unplugin-auto-import": "^0.18.2",
-    "vite": "^5.3.5"
+    "vite": "^5.4.0"
   },
   "devDependencies": {
-    "@tb-dev/eslint-config": "^4.4.2",
+    "@tb-dev/eslint-config": "^5.0.3",
     "@types/node": "^22.1.0",
-    "eslint": "^8.57.0",
+    "eslint": "^9.8.0",
     "husky": "^9.1.4",
     "lint-staged": "^15.2.8",
     "prettier": "^3.3.3",
     "tslib": "^2.6.3",
     "typescript": "^5.5.4",
     "vite-plugin-dts": "^3.9.1",
-    "vue": "^3.4.35"
+    "vue": "^3.4.37"
   },
   "peerDependencies": {
     "@tauri-apps/api": "^2.0.0-rc.0",
@@ -49,7 +49,7 @@
     "@vueuse/core": "^10.11.0",
     "@vueuse/math": "^10.11.0",
     "@vueuse/router": "^10.11.0",
-    "manatsu": "^1.0.0-alpha.4",
+    "manatsu": "^1.0.0",
     "pinia": "^2.2.0",
     "vue": "^3.4.34",
     "vue-router": "^4.4.0"
