--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "7.0.1",
+  "version": "7.0.2",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
   "private": false,
-  "packageManager": "pnpm@9.11.0",
+  "packageManager": "pnpm@9.12.0",
   "homepage": "https://github.com/ferreira-tb/auto-import-config",
   "repository": {
     "type": "git",
@@ -29,7 +29,7 @@
     "vite": "^5.4.8"
   },
   "devDependencies": {
-    "@tb-dev/eslint-config": "^5.3.3",
+    "@tb-dev/eslint-config": "^5.3.4",
     "@types/node": "^22.7.4",
     "eslint": "^9.11.1",
     "husky": "^9.1.6",
@@ -40,12 +40,12 @@
     "vue": "^3.5.10"
   },
   "peerDependencies": {
-    "@tauri-apps/api": "^2.0.0-rc.6",
-    "@tb-dev/utils": "^3.3.1",
+    "@tauri-apps/api": "^2.0.1",
+    "@tb-dev/utils": "^3.3.2",
     "@vueuse/core": "^11.1.0",
     "@vueuse/math": "^11.1.0",
     "@vueuse/router": "^11.1.0",
-    "pinia": "^2.2.3",
+    "pinia": "^2.2.4",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
   },
