--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "8.0.1",
+  "version": "8.0.2",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
   "private": false,
-  "packageManager": "pnpm@9.12.1",
+  "packageManager": "pnpm@9.12.2",
   "homepage": "https://github.com/ferreira-tb/auto-import-config",
   "repository": {
     "type": "git",
@@ -21,30 +21,31 @@
     "lint": "eslint . --config eslint.config.js --cache",
     "lint-fix": "eslint . --config eslint.config.js --fix",
     "release": "pnpm run build && pnpm publish",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "update": "miho update major -t"
   },
   "dependencies": {
     "unplugin-auto-import": "^0.18.3",
-    "vite": "^5.4.8"
+    "vite": "^5.4.10"
   },
   "devDependencies": {
-    "@tb-dev/eslint-config": "^5.4.2",
-    "@types/node": "^22.7.5",
-    "eslint": "^9.12.0",
+    "@tb-dev/eslint-config": "^5.4.9",
+    "@types/node": "^22.7.9",
+    "eslint": "^9.13.0",
     "prettier": "^3.3.3",
-    "tslib": "^2.7.0",
+    "tslib": "^2.8.0",
     "typescript": "^5.6.3",
-    "vite-plugin-dts": "^4.2.3",
-    "vue": "^3.5.11"
+    "vite-plugin-dts": "^4.3.0",
+    "vue": "^3.5.12"
   },
   "peerDependencies": {
-    "@tauri-apps/api": "^2.0.1",
-    "@tb-dev/utils": "^4.0.0",
+    "@tauri-apps/api": "^2.0.3",
+    "@tb-dev/utils": "^4.0.2",
     "@vueuse/core": "^11.1.0",
     "@vueuse/math": "^11.1.0",
     "@vueuse/router": "^11.1.0",
     "pinia": "^2.2.4",
-    "vue": "^3.5.10",
+    "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
   "engines": {
