chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "9.1.1",
+  "version": "9.1.2",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
   "private": false,
-  "packageManager": "pnpm@10.6.2",
+  "packageManager": "pnpm@10.7.0",
+  "funding": "https://github.com/sponsors/ferreira-tb",
   "homepage": "https://github.com/ferreira-tb/auto-import-config",
   "repository": {
     "type": "git",
@@ -24,13 +25,13 @@
     "update": "miho update major -t"
   },
   "dependencies": {
-    "unplugin-auto-import": "^19.1.1",
-    "vite": "^6.2.1"
+    "unplugin-auto-import": "^19.1.2",
+    "vite": "^6.2.3"
   },
   "devDependencies": {
-    "@tb-dev/eslint-config": "^6.5.1",
-    "@types/node": "^22.13.10",
-    "eslint": "^9.22.0",
+    "@tb-dev/eslint-config": "^6.7.1",
+    "@types/node": "^22.13.14",
+    "eslint": "^9.23.0",
     "prettier": "^3.5.3",
     "tslib": "^2.8.1",
     "typescript": "^5.8.2",
@@ -38,8 +39,8 @@
     "vue": "^3.5.13"
   },
   "peerDependencies": {
-    "@tauri-apps/api": "^2.3.0",
-    "@tb-dev/utils": "^5.1.0",
+    "@tauri-apps/api": "^2.4.0",
+    "@tb-dev/utils": "^5.1.4",
     "@vueuse/core": "^13.0.0",
     "@vueuse/math": "^13.0.0",
     "@vueuse/router": "^13.0.0",
@@ -53,14 +54,12 @@
   "files": [
     "dist/**/*"
   ],
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "import": "./dist/index.js"
     }
   }
 }
