--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@tb-dev/auto-import-config",
-  "version": "9.2.10",
+  "version": "9.2.11",
   "description": "Config for unplugin-auto-import",
   "license": "MIT",
   "type": "module",
   "private": false,
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.1",
   "funding": "https://github.com/sponsors/ferreira-tb",
   "homepage": "https://github.com/ferreira-tb/auto-import-config",
   "repository": {
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "build": "vite build",
-    "format": "prettier . --write",
+    "format": "dprint fmt",
     "lint": "eslint . --config eslint.config.js --cache",
     "lint-fix": "eslint . --config eslint.config.js --fix",
     "release": "pnpm run build && pnpm publish",
@@ -25,27 +25,26 @@
     "update": "miho update major -t"
   },
   "dependencies": {
-    "unplugin-auto-import": "^20.0.0",
-    "vite": "^7.1.2"
+    "unplugin-auto-import": "^20.1.0",
+    "vite": "^7.1.4"
   },
   "devDependencies": {
-    "@tb-dev/eslint-config": "^8.0.5",
-    "@types/node": "^24.2.1",
-    "eslint": "^9.33.0",
-    "prettier": "^3.6.2",
+    "@tb-dev/eslint-config": "^8.0.8",
+    "@types/node": "^24.3.1",
+    "eslint": "^9.34.0",
     "tslib": "^2.8.1",
     "typescript": "^5.9.2",
     "vite-plugin-dts": "^4.5.4",
-    "vue": "^3.5.18"
+    "vue": "^3.5.21"
   },
   "peerDependencies": {
-    "@tauri-apps/api": "^2.7.0",
-    "@tb-dev/utils": "^7.0.10",
-    "@vueuse/core": "^13.6.0",
-    "@vueuse/math": "^13.6.0",
-    "@vueuse/router": "^13.6.0",
+    "@tauri-apps/api": "^2.8.0",
+    "@tb-dev/utils": "^7.0.14",
+    "@vueuse/core": "^13.9.0",
+    "@vueuse/math": "^13.9.0",
+    "@vueuse/router": "^13.9.0",
     "pinia": "^3.0.3",
-    "vue": "^3.5.18",
+    "vue": "^3.5.21",
     "vue-router": "^4.5.1"
   },
   "engines": {
